--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   @font-face {
     font-family: 'sarasa';
     src:
-      url('./src/assets/fonts/sarasa-ui-cl-regular.ttf') format('truetype');
+      url('/src/assets/fonts/sarasa-ui-cl-regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
   }
@@ -18,7 +18,7 @@
   @font-face {
     font-family: 'JetBrainsMono';
     src:
-      url('./src/assets/fonts/JetBrainsMono-Regular.ttf') format('truetype');
+      url('/src/assets/fonts/JetBrainsMono-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
   }
